--- a/src/Style.css
+++ b/src/Style.css
@@ -8,6 +8,7 @@
     margin: auto;
     width: 70%;
     vertical-align: bottom;
+    padding-top: 10px;
 }
 .Clue {
     display: inline-block;
@@ -18,14 +19,14 @@
     float: left;
 }
 .Button {
-    width: 20%;
+    width: 10%;
     height: 100%;
     background-color: transparent;
     vertical-align: center;
     float: right;
 }
 .Image {
-    width: 50%;
+    width: 40%;
     height: auto;
     -webkit-appearance: none
 }
@@ -47,12 +48,6 @@
     overflow: hidden;
     -webkit-appearance: none
 }
-
-/* .ResponseImage {
-    width: 14;
-    height: 0;
-    padding-bottom: 14%;
-} */
 
 .Section {
     display: flex;
